--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <title>Horóscopo Diário | Horóscopo Do Dia</title>
+  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <H1>Teste do GitHub</H1>
+  <header>
+      <img src="/imagens/horoscopo-diario-de-hoje.jpg" alt="">
+    <div class="header">
+      <h2 class="header_h2">Horóscopo Diário</h2>
+      <p class="link_site">horoscopodiario.com.br</p>
+    </div>
+  </header>
+  <main>
+    <section>
+      <h1 class="tittle">
+        HORÓSCOPO <br> DIÁRIO
+      </h1>
+      <p class="subtittle">ESCOLHA O SEU SIGNO</p>
+    </section>
+  </main>
 </body>
 </html>
