--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="main_header">
       <h1 class="tittle">
         HORÓSCOPO <br> DIÁRIO
       </h1>
