--- a/index.html
+++ b/index.html
@@ -22,6 +22,82 @@
       </h1>
       <p class="subtittle">ESCOLHA O SEU SIGNO</p>
     </section>
+    <p class="menu_navbar">Horóscopo de Hoje</p>
+    <Section class="menu">
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-aries.jpg" alt=""></a>
+        <p>Aries</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-touro.jpg" alt=""></a>
+        <p>Touro</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-gemeos.jpg" alt=""></a>
+        <p>Gemeos</p></a>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-cancer.jpg" alt=""></a>
+        <p>Câncer</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-leao.jpg" alt=""></a>
+        <p>Leão</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-virgem.jpg" alt=""></a>
+        <p>Virgem</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-libra.jpg" alt=""></a>
+        <p>Libra</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-escorpiao.jpg" alt=""></a>
+        <p>Escorpião</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-sagitario.jpg" alt=""></a>
+        <p>Sargitário</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-capricornio.jpg" alt=""></a>
+        <p>Capricórnio</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-aquario.jpg" alt=""></a>
+        <p>Aquário</p>
+      </div>
+      <div class="icon_signo">
+        <a href=""><img src="/imagens/horoscopo-diario-peixes.jpg" alt=""></a>
+        <p>Peixes</p>
+      </div>
+    </Section>
+    <section class="welcome">
+      <h4>Entrou no seu Signo? <br> Bem-vinda(o) ao Horóscopo Diário</h4>
+    </section>
+    <h3>CARACTERÍSTICAS
+      DOS SIGNOS</h3>
+      <p>horóscopo diario:</p>
+      <section class="link_signo">
+        <div class="links">
+          <a href="/">Horóscopo Diário de Áries</a>
+          <p>Regido por Marte, Áries é auto-confiante e muito competitivo, pessoas desse signo tem uma personalidade forte.</p>
+        </div>
+        <div class="links">
+          <a href="/">Horóscopo Diário de Touro</a>
+          <p>Regido por Marte, Áries é auto-confiante e muito competitivo, pessoas desse signo tem uma personalidade forte.</p>
+        </div>
+        <div class="links">
+          <a href="/">Horóscopo Diário de Gêmeos</a>
+          <p>Regido por Marte, Áries é auto-confiante e muito competitivo, pessoas desse signo tem uma personalidade forte.</p>
+        </div>
+      </section>
+      <a class="signo_amanha" href=""><p>Horóscopo de Amanhã</p></a>
   </main>
+  <footer>
+    <h3>HORÓSCOPO DIÁRIO</h3>
+    <a href=""><p>POLITICA DE PRIVACIDADE</p></a>
+  </footer>
 </body>
 </html>
