--- a/touro.html
+++ b/touro.html
@@ -56,6 +56,7 @@
         <a class="nome" href="">>>Outros signos<<</a>
         <a class="nome" href="">>>Horóscopo de Amanhã<<</a>
         <a class="nome" href="">>>Sorte do Signo de Touro<<</a>
+        <p class="space"></p>
     </main>
     <footer>
         <h3>TAROT DO DIA - TAROT CARTAS</h3>
